@@ -7,6 +7,11 @@ max:
 * fixed hatching with ticPwd==NULL
 
 ----- cvs ci ------
+Fri May 13 18:09:09 MSD 2000
+max (patch from Serguei Revtov):
+* announce to ANY netmail area
+
+----- cvs ci ------
 Mon May  8 17:40:14 NOVST 2000
 max (patch from Alex Bronin):
 * MS Visual C porting
